--- a/views/html/listasEspecifica.html
+++ b/views/html/listasEspecifica.html
@@ -36,13 +36,16 @@
 ================================================== -->
 <body> 
 
-<section class="container-fluid"  id="cabecera">
+	<div class="container-fluid cabecera"> 
+		<h1 id="nombreLista"></h1>
+		<h2 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h2>
+	</div>
+	
+<section id="seccionLista">
 	<div class="intro-wrap col-sm-12" style="height:80%;">
-      		<div class="col-sm-12"></div>
-       	 	<div class="container-fluid"><h1 id="nombreLista"></h1></div> 			
-       	 	<div class="container-fluid"><h1 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h1></div> 	 
-				<div class="container-fluid">  
-					<table	class="table-striped border-success" 
+      		<div class="col-sm-12"></div>			 
+				<div class="container-fluid tabla">  
+					<table	class="border-success" 
 							style="background-color:rgb(255, 255, 255)" 
 							width=100%
 							id="myTable"
