--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -48,7 +48,7 @@
 	 </nav>  <!-- end #menu-nav-wrap -->
 </header> <!-- end header -->  
 
-<body style="background-color: #efefef;">
+<body>
 <!-- SECCION DE LISTAS
 ================================================== -->
 <div class="container-fluid cabecera"> 
