--- a/views/css/listaEspecificaEstilo.css
+++ b/views/css/listaEspecificaEstilo.css
@@ -1,9 +1,28 @@
 /*////////////////////////////////////////////FONDO*/
-#cabecera{
-    background-color: black;
-    height:40em;
+.cabecera{
+    background-image: url(../images/fondoNaranja.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height:15em;
+    padding-top:5em; 
+    padding-bottom:20em;
 }
 
+.cabecera h1{
+    font-size:13vmin;
+    color:white;
+    text-shadow: 2px 2px 4px #000000;
+    font-family: "montserrat-bold", sans-serif;
+    font-style: normal;
+    text-rendering: optimizeLegibility;
+}
+
+.cabecera h2{
+    font-size:4vmin;
+    text-align:center;
+    color:white;
+    text-shadow: 1px 1px 2px #000000;
+} 
 
 /*///////////////////////////////TITULO Y SIBTITULO*/
 #nombreLista{
@@ -17,13 +36,20 @@
 }
 
 
+#seccionLista{
+    background-color: rgba(0, 0, 0, 0.823);
+}
+
 /*////////////////////////////////TABEL DATA*/
 
 td, th{
     font-size:2.5vmin;
     font-family:Arial, Helvetica, sans-serif;
 
+
 }
+
+
 
 /*///////////////////////////////BARRA DE BUSQUEDA*/
 .search{
