--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" 		href="./views/css/base.css">
 		<link rel="stylesheet" 		href="./views/css/vendor.css">
 		<link rel="stylesheet" 		href="./views/css/main.css">
-		<link rel="stylesheet" 		href="./views/css/personal.css">
+	
 		<script src="../js/src/jquery.js"></script>
 		<script src="../js/src/helpers.js"></script>
 		<script src="../js/src/modernizr.js"></script>
@@ -17,10 +17,8 @@
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
 
-<!--salto de linea en negro al ppio de la hoja-->
-<div style="color:black; display:inline-block"></div>
 
-<body class="home" style=" background-image: url(../images/fondoNaranja.jpg);background-repeat: no-repeat;background-size: 100% 100%;">
+<body>
 <!--Div where the WhatsApp will be rendered-->
 <div id="WAButton" style="font-family: Arial, Helvetica, sans-serif; z-index:10;"></div>
 
@@ -49,15 +47,29 @@
 </header> <!-- end header -->  
 
 
+
+
+
 <!-- SECCION DE LISTAS
 ================================================== -->
+
+<body>
+
+
 <section>
+
+	<div class="cabecera"> 
+		<h1>LISTA DE PRECIOS</h1>
+		<h2>Precios Finales</h2>
+	</div>
+
 	<div class="competenciaPlantilla competencia">
 			<div class="card">
 				<h2><a class="link titulo" href="listasEspecifica.html?id="></a></h2>
 			</div>
 		</div>	
-		<div class="competencias"></div>
+	
+	<a class="link titulo" href="listasEspecifica.html?id="><div class="competencias"></div></a>
 </section>
 
 
