--- a/views/css/listaEspecificaEstilo.css
+++ b/views/css/listaEspecificaEstilo.css
@@ -87,3 +87,11 @@ td, th{
     
   }
 
+/*////////////////loading template */
+.ph-item,
+.ph-picture {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
