--- a/views/css/galeria.css
+++ b/views/css/galeria.css
@@ -47,3 +47,12 @@
       padding-bottom: 5rem;
     }
   }
+
+.img-fluid:hover{
+    transition: .5s;
+  transform: scale(1.1);
+  z-index:10;
+}
+
+
+/*****************efectos en botonoes ****************/
