listas con agrupacion de rubro

--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -61,10 +61,10 @@
 	</div>
 	<div class="competenciaPlantilla competencia">
 			<div class="card">
-				<h2><a class="link titulo" href="listasEspecifica.html?id="></a></h2>
+				<h2><a class="link titulo" href="listaEspecifica2.html?id="></a></h2>
 			</div>
 		</div>		
-	<a class="link titulo" href="listasEspecifica.html?id="><div class="competencias"></div></a>
+	<a class="link titulo" href="listaEspecifica2.html?id="><div class="competencias"></div></a>
 </section>
 
 
