mejorando listas de precios

--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -76,29 +76,25 @@
 <section id="seccionLista">
 	<div class="intro-wrap col-sm-12" style="height:80%;">
       		<div class="col-sm-12"></div>			 
-				<div class="container-fluid tabla">  
-					<table	class="border-success" 
-							style="background-color:rgb(255, 255, 255)" 
-							width=100%
-							id="myTable"
+				<div class="container-fluid tabla" >  
+					<table	class="border-success"  style="background-color:rgb(255, 255, 255)" width=100%  id="myTable"
 							data-buttons-class="danger"
-							data-mobile-responsive="true"
 							data-mobile-responsive="true"
 							data-search-align="left"
 							data-search="true"
 							data-show-export="true"
 							data-show-columns="true"
 							data-key-events="true"
-							data-fixed-columns="true"
+							data-fixed-columns="true" 
 							data-show-print="true"					 
 							data-toolbar-align="left"
-							data-loading-template="loadingTemplate">
-						<thead class="thead-dark"> 
+							data-show-header="false">
+							<thead class="thead-dark" > 
 							  <tr> 
 								  	<th data-field="id">  						Articulo		</span style="text-align: center;"></th> 
-								  	<th data-field="d" class="text-wrap">  						Descripcion		</span style="text-align: left;"> </th> 
-								  	<th data-field="r">  						Rubro	</span style="text-align: left;"> </th> 
-								  	<th data-field="p" data-width="90" class="text-right">    		Precio sin IVA 	</span> </th>
+								  	<th data-field="d" >  						Descripcion		</span style="text-align: left;"> </th> 
+								  	<th data-field="r" class="text-wrap" data-card-visible="false">  						Rubro	</span style="text-align: left;"> </th> 
+								  	<th data-field="p" data-width="90" class="text-right" data-card-visible="false" >    		Precio sin IVA 	</span> </th>
 									<th data-field="pf" data-width="90"class="text-right">  	Precio con IVA 	</span> </th>  
 							  </tr> 
 						</thead> 
