--- a/views/css/listaEspecifica2.css
+++ b/views/css/listaEspecifica2.css
@@ -42,3 +42,80 @@
 	  color:white;
 	  text-shadow: 1px 1px 2px #000000;
   } 
+
+  /*///////////////////////////////TITULO Y SIBTITULO*/
+#nombreLista{
+    color:whitesmoke;
+    padding-top:3%;
+    font-size:4em;
+}
+#ultimaActualizacion{
+    color:whitesmoke;
+    font-size:2em;
+}
+
+
+#seccionLista{
+    background-color: rgb(0, 0, 0);
+}
+
+/*////////////////////////////////TABEL DATA*/
+
+td, th{
+    font-size:2.5vmin;
+    font-family:Arial, Helvetica, sans-serif;
+
+
+}
+
+
+
+/*///////////////////////////////BARRA DE BUSQUEDA*/
+.search{
+    background-color: whitesmoke;
+    border-radius:0.5em;
+}
+
+
+@media only screen and (max-width: 480px) {
+    .columns.columns-right.btn-group.float-right{
+      display:none;
+    }
+
+	#rubro{
+		display:none;
+	}
+    .float-left.search.btn-group{
+        width:100%;
+    }
+    .cabecera{
+        padding-top:8em;
+        padding-bottom:10em;
+    }
+    #seccionLista{
+        padding-top:2Vmin;
+    }
+    td {
+        font-size:4vmin;
+        font-family:Arial, Helvetica, sans-serif;
+    }
+    .card-view-title{
+        font-size:3.3vmin;
+        display:none;
+        width:10%;
+        font-family:Arial, Helvetica, sans-serif;
+    }
+	thead{
+		display:none;
+	}
+    
+  }
+
+/*////////////////loading template */
+.ph-item,
+.ph-picture {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
