--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -54,11 +54,15 @@
 ================================================== -->
 
 <body>
+
+	<div class="container-fluid cabecera"> 
+		<h1 id="nombreLista"></h1>
+		<h2 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h2>	
+		
 <section>
-	<div class="cabecera"> 
-		<h1>LISTA DE PRECIOS</h1>
-		<h2>Precios Finales</h2>
-	</div>
+<div class="container-fluid cabecera"> 
+		<h1 id="nombreLista"></h1>
+		<h2 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h2>
 	<div class="competenciaPlantilla competencia">
 			<div class="card">
 				<h2><a class="link titulo" href="listaEspecifica2.html?id="></a></h2>
