--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -52,14 +52,14 @@
 <!-- SECCION DE LISTAS
 ================================================== -->
 <div class="container-fluid cabecera"> 
-	<h1>OFERTAS</h1>
-	<h2>Disponibles segun stock. Precios Finales.</h2>
+	<h1 id="nombreLista">Ofertas del Mes</h1>
+	<h2 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h2>	
+	
 </div>
-
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
 
-       		<div class="container-fluid"><h1 id="titulo">COMBOS</h1></div>		
+       		<div class="container-fluid"><h1 id="titulo">Combos</h1></div>		
        		<div class="container-fluid"><h1 id="subtitulo">Los cantidades minimas son als indicadas</h1></div> 	 
 
 				<div class="container-fluid competencias ofertas" style="justify-content: left;" >
@@ -82,7 +82,7 @@
  
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
-				<div class="container-fluid"><h1 id="titulo">KIT FILTROS</h1></div>	
+				<div class="container-fluid"><h1 id="titulo">Kit Filtros</h1></div>	
 				<div class="container-fluid"><h1 id="subtitulo">condicion de pago: contado</h1></div> 	 
 	
 			<div class="container-fluid">  
@@ -100,12 +100,56 @@
 				</div> 
 			</div>
 		</div>  
-
-
-
 	</div>
 </section>
 
+
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+			<div class="container-fluid"><h1 id="titulo">Valvoline</h1></div>	
+			<div class="container-fluid"><h1 id="subtitulo">comprando por caja cerrada</h1></div> 	 
+
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias valvolineOfertas" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-6 col-sm-4 valvoline" id="plantilla3" style="padding:1em;">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle"></h5>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	</div>  
+</div>
+</section>
+
+
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+			<div class="container-fluid"><h1 id="titulo">Motul<h1></div>	
+			<div class="container-fluid"><h1 id="subtitulo">Comprando por caja cerrada</h1></div> 	 
+
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias motulOfertas" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-6 col-sm-4 motul" id="plantilla4" style="padding:1em;">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle"></h5>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	</div>  
+</div>
+</section>
 
 
 </body>
