verison prueba vendedores

--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -83,7 +83,7 @@
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
 				<div class="container-fluid"><h1 id="titulo">Kit Filtros</h1></div>	
-				<div class="container-fluid"><h1 id="subtitulo">condicion de pago: contado</h1></div> 	 
+				<div class="container-fluid"><h1 id="subtitulo">Compra min. 12 Kits surtidos</h1></div> 	 
 	
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
