--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -52,19 +52,19 @@
 <!-- SECCION DE LISTAS
 ================================================== -->
 <div class="container-fluid cabecera"> 
-	<h1 id="nombreLista">Ofertas del Mes</h1>
-	<h2 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h2>	
+	<h1 id="nombreLista">Ofertas Vigentes</h1>
+	<h2 id="ultimaActualizacion">PRECIOS FINALES / Sep 2020</h2>	
 	
 </div>
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
 
-       		<div class="container-fluid"><h1 id="titulo">Combos</h1></div>		
-       		<div class="container-fluid"><h1 id="subtitulo">Los cantidades minimas son als indicadas</h1></div> 	 
+       		<div class="container-fluid"><h1 id="titulo">OFERTAS</h1></div>		
+       		<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA. 12 DE CADA OFERTA</h1></div> 	 
 
 				<div class="container-fluid competencias ofertas" style="justify-content: left;" >
 					<div class="row">
-					  <div class="col-6 col-sm-4 oferta" id="plantilla" style="padding:1em;">
+					  <div class="col-6 col-sm-6 oferta" id="plantilla" style="padding:1em;">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -83,7 +83,7 @@
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
 				<div class="container-fluid"><h1 id="titulo">Kit Filtros</h1></div>	
-				<div class="container-fluid"><h1 id="subtitulo">Compra min. 12 Kits surtidos</h1></div> 	 
+				<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA. 12 KITS SURTIDOS</h1></div> 	 
 	
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
@@ -152,8 +152,59 @@
 </section>
 
 
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+			<div class="container-fluid"><h1 id="titulo">Total<h1></div>	
+			<div class="container-fluid"><h1 id="subtitulo">Comprando por caja cerrada</h1></div> 	 
+
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias totalOfertas" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-6 col-sm-4 total" id="plantilla5" style="padding:1em;">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle"></h5>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	</div>  
+</div>
+</section>
+
+
+
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+			<div class="container-fluid"><h1 id="titulo">Selenia<h1></div>	
+			<div class="container-fluid"><h1 id="subtitulo">Comprando por caja cerrada</h1></div> 	 
+
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-6 col-sm-4 selenia" id="plantilla6" style="padding:1em;">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle"></h5>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	</div>  
+</div>
+</section>
+
+
 </body>
 <script src="../js/src/plugins.js"></script>
 <script src="../js/src/main.js"></script>
 <script src="../js/ofertasService.js"></script>
 </html>
+
+
