ofertas post vista vendedores

--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -83,7 +83,7 @@
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
 				<div class="container-fluid"><h1 id="titulo">Kit Filtros</h1></div>	
-				<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA. 12 KITS SURTIDOS</h1></div> 	 
+				<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: 12 KITS SURTIDOS</h1></div> 	 
 	
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
@@ -107,7 +107,7 @@
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">Valvoline</h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">comprando por caja cerrada</h1></div> 	 
+			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
 
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias valvolineOfertas" style="justify-content: left;" >
@@ -131,7 +131,7 @@
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">Motul<h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">Comprando por caja cerrada</h1></div> 	 
+			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
 
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias motulOfertas" style="justify-content: left;" >
@@ -155,7 +155,7 @@
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">Total<h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">Comprando por caja cerrada</h1></div> 	 
+			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
 
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias totalOfertas" style="justify-content: left;" >
@@ -180,7 +180,7 @@
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">Selenia<h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">Comprando por caja cerrada</h1></div> 	 
+			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
 
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;" >
