--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet"    href="../css/vendor.css">  
 <link rel="stylesheet"    href="../css/main.css">  
 <link rel="stylesheet"    href="../css/personal.css">  
+<link rel="stylesheet"    href="../css/faq.css">  
 <link rel="stylesheet"    href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon"          href="favicon.ico" type="image/x-icon">
@@ -21,7 +22,7 @@
 <!-- #rWPP            --><script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
 
 </head>
-<body id="top">
+<body >
 
     
 <!-- NAV BAR
@@ -69,7 +70,38 @@
 			</div> <!-- end home-content-table -->
 </section>
 
+
+
+
+
+<!-- RESUMEN
+================================================== -->
+<div  class="seccionfull">
+	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/1CMSYGJot1g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/nho_k5NQR4Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+</div>
+
+
+
+
+
+
+
     
+<!-- VIDEOS
+================================================== -->
+<div  class="seccionfull">
+	
+</div>
+
+<div  class="seccionfull">
+	<div><iframe width="441" height="360" src="https://www.youtube.com/embed/4Geyb8FKzvQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/cFB69J3LirI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+</div>
+
+
+
+
 <!-- FAQ
 ================================================== -->
 <section id="services" style="padding:5%">
@@ -87,11 +119,6 @@
 
     
 
-
- <p class="lead" id="Nosotros"></p>  			
-   </div> 
-</div> 
-    
 
 
 
