--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet"    href="../css/base.css">
 <link rel="stylesheet"    href="../css/vendor.css">  
 <link rel="stylesheet"    href="../css/main.css">  
-<link rel="stylesheet"    href="../css/personal.css">  
+
 <link rel="stylesheet"    href="../css/faq.css">  
 <link rel="stylesheet"    href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -77,8 +77,7 @@
 <!-- RESUMEN
 ================================================== -->
 <div  class="seccionfull">
-	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/1CMSYGJot1g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/nho_k5NQR4Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	
 </div>
 
 
@@ -91,7 +90,8 @@
 <!-- VIDEOS
 ================================================== -->
 <div  class="seccionfull">
-	
+	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/1CMSYGJot1g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/nho_k5NQR4Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 </div>
 
 <div  class="seccionfull">
@@ -104,12 +104,12 @@
 
 <!-- FAQ
 ================================================== -->
-<section id="services" style="padding:5%">
+<section class="container" id="services" style="padding:5%" height="100%">
 <div class="overlay">
 <div class="gradient-overlay">
 	<div class="row narrow section-intro with-bottom-sep animate-this">
 		<div class="col-full" id="campoPreguntas">
-			<h1 id="tituloSeccion2"></h1>
+			<h1 id="tituloSeccion2" style="color:black"></h1>
 			<p id="descSeccion2" style="color:black"></p>
 		</div>
 	</div>
@@ -117,13 +117,6 @@
 
 </section>
 
-    
-
-
-
-
-    
-<!-- #FAQn -->
 
 
 </body>
