--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -74,17 +74,6 @@
 
 
 
-<!-- RESUMEN
-================================================== -->
-<div  class="seccionfull">
-	
-</div>
-
-
-
-
-
-
 
     
 <!-- VIDEOS
@@ -92,12 +81,27 @@
 <div  class="seccionfull">
 	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/1CMSYGJot1g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/nho_k5NQR4Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-</div>
 
-<div  class="seccionfull">
+
+
 	<div><iframe width="441" height="360" src="https://www.youtube.com/embed/4Geyb8FKzvQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/cFB69J3LirI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 </div>
+
+
+<!-- RESUMEN
+================================================== -->
+<section>
+	<div class="home-content-table">	
+		<div class="home-content-tablecell">
+		 <div class="row">
+				<div class="col-twelve" id="campoParrafo">			
+				 <h2></h2>
+			   </div> <!-- end col-twelve --> 
+			</div> <!-- end row --> 
+	 </div> <!-- end home-content-tablecell --> 		   
+ </div>
+</section>
 
 
 
@@ -108,6 +112,7 @@
 <div class="overlay">
 <div class="gradient-overlay">
 	<div class="row narrow section-intro with-bottom-sep animate-this">
+		<h2 style="color:white;padding-top:3rem;">Pregutnas Frecuentes</h2>
 		<div class="col-full" id="campoPreguntas">
 			<h1 id="tituloSeccion2" style="color:black"></h1>
 			<p id="descSeccion2" style="color:black"></p>
