--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -55,13 +55,10 @@
 
 <body>
 
-	<div class="container-fluid cabecera"> 
-		<h1 id="nombreLista"></h1>
-		<h2 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h2>	
-		
+
 <section>
 <div class="container-fluid cabecera"> 
-		<h1 id="nombreLista"></h1>
+		<h1 id="nombreLista">Listas De Precios</h1>
 		<h2 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h2>
 	<div class="competenciaPlantilla competencia">
 			<div class="card">
