--- a/views/css/listas.css
+++ b/views/css/listas.css
@@ -1,26 +1,47 @@
+@font-face {
+    font-family: "montserrat-regular";
+    src: url("../fonts/montserrat/montserrat-regular-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-regular-webfont.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+  }
 
 
+/*////////////////////////////////////////////FONDO*/
+/*--------- CUSTOM LAYOUT ---------*/
 
+
+body {
+	width:100%;
+	text-align: center;
+	margin:0px;
+	padding:0px;
+	background-color: #000000;
+}
+  
 .cabecera{
-    background-image: url(../images/fondoNaranja.jpg);
-	background-repeat: no-repeat;
-    background-size: 100%;
-    height:15em;
-    padding-top:2em; 
-    padding-bottom:2em;
+	background-color: #000000;
+	background-size: 100%;
+	height:15rem;
+	margin:0px;
+	padding:5rem;
+	padding-bottom:10rem;
 }
-
+  
+  
 .cabecera h1{
-    font-size:13vmin;
-    color:white;
+	font-family: "librebaskerville-bold", serif;
+	font-size: 4.8rem;
+	color:white;
 	text-shadow: 2px 2px 4px #000000;
+	font-style: normal;
+	text-rendering: optimizeLegibility;
 }
-
+  
 .cabecera h2{
-    font-size:4vmin;
-    text-align:center;
-    color:white;
-    text-shadow: 1px 1px 2px #000000;
+	font-size:4vmin;
+	text-align:center;
+	color:white;
+	text-shadow: 1px 1px 2px #000000;
 } 
 
 
@@ -33,7 +54,7 @@
 /*------*/
 
 body {
-	background-color: #2D3E52;
+	background-color: #000000;
     text-align: center;
 }
 
