lista especifica funcionando con table headers ON y OFF

--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -69,7 +69,7 @@
 <div class="container-fluid cabecera"> 
 	<h1 id="nombreLista"></h1>
 
-	<h2>Disponibles en breve</h2>
+	<h2>Precios unitarios Finales.</h2>
 </div>
 
 
@@ -88,7 +88,7 @@
 							data-fixed-columns="true" 
 							data-show-print="true"					 
 							data-toolbar-align="left"
-							data-show-header="true"
+							data-show-header="false"
 							data-group-by-field="r">
 							<thead class="thead-dark" > 
 							  <tr> 
