--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -59,17 +59,18 @@
 <section>
 <div class="container-fluid cabecera"> 
 		<h1 id="nombreLista">Listas De Precios</h1>
-		<h2 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h2>
+		<h2 id="ultimaActualizacion">LUBRICANTES:  10% descuento comprando de a caja cerrada</h2>
 	<div class="competenciaPlantilla competencia">
 			<div class="card">
 				<h2><a class="link titulo" href="listaEspecifica2.html?id="></a></h2>
 			</div>
 		</div>		
-	<a class="link titulo" href="listaEspecifica2.html?id="><div class="competencias"></div></a>
+	<div class="competencias"><a class="link titulo" href="listaEspecifica2.html?id=" ></a></div>
 </section>
 
 
 </body>
+<script src="../js/src/helpers.js"></script>
 	<script src="../js/src/plugins.js"></script>
 	<script src="../js/src/main.js"></script>
 	<script src="../js/listasService.js"></script>
