--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -13,8 +13,9 @@
 		<script src="../js/src/helpers.js"></script>
 		<script src="../js/src/modernizr.js"></script>
 		<script src="..js/src/pace.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="../css/listas.css">
+
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
+		<link rel="stylesheet" type="text/css" href="../css/listas.css">
 	</head>
 
 
@@ -60,6 +61,7 @@
 <div class="container-fluid cabecera"> 
 		<h1 id="nombreLista">Listas De Precios</h1>
 		<h2 id="ultimaActualizacion">LUBRICANTES:  10% descuento comprando de a caja cerrada</h2>
+</div>
 	<div class="competenciaPlantilla competencia">
 			<div class="card">
 				<h2><a class="link titulo" href="listaEspecifica2.html?id="></a></h2>
